Gave users abck the ability to show restaurant

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -20,6 +20,7 @@
         <td><%= restaurant.location %></td>
         <td><%= restaurant.up_vote %></td>
         <td><%= restaurant.down_vote %></td>
+        <td><%= link_to 'Show', restaurant %></td>
       </tr>
     <% end %>
   </tbody>
