--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,13 +11,14 @@
 </p>
 
 <p>
-  <strong>Up vote:</strong>
+  <strong>  <%= link_to 'Up Vote', upvote_restaurant_path(@restaurant), method: 'patch' %>: </strong>
   <%= @restaurant.up_vote %>
 </p>
 
 <p>
-  <strong>Down vote:</strong>
+  <strong><%= link_to 'Down Vote', downvote_restaurant_path(@restaurant), method: 'patch'%>: </strong>
   <%= @restaurant.down_vote %>
+  
 </p>
 
 <%= link_to 'Back', restaurants_path %>
