--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -23,29 +23,20 @@
 
 
   <tbody>
-  <% if user_signed_in? %>
     <% @restaurants.each do |restaurant| %>
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.location %></td>
+        <td><%= link_to 'Show', restaurant %></td>
+        <% if restaurant.user == current_user %>
         <td><%= restaurant.up_vote %></td>
         <td><%= restaurant.down_vote %></td>
-        <td><%= link_to 'Show', restaurant %></td>
+        
 	<td><%= button_to 'Up Vote', upvote_restaurant_path(restaurant), method: 'patch' %></td>
 	<td><%= button_to 'Down Vote', downvote_restaurant_path(restaurant), method: 'patch'%></td>
+  <% end %>
       </tr>
-    <% end %>
-  <%else %>
-<% @restaurants.each do |restaurant| %>
-      <tr>
-        <td><%= restaurant.name %></td>
-        <td><%= restaurant.location %></td>
-        <td><%= link_to 'Show', restaurant %></td>
-      </tr>
-    <% end %>
-
-
-    <% end %>
+    <% end %>  
   </tbody>
 </table>
 
