--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -28,8 +28,8 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.location %></td>
-        <td><%= restaurant.up_vote %></td>
-        <td><%= restaurant.down_vote %></td>
+        <td><%= restaurant.upvote %></td>
+        <td><%= restaurant.downvote %></td>
         <td><%= link_to 'Show', restaurant %></td>
 	<td><%= button_to 'Up Vote', upvote_restaurant_path(restaurant), method: 'patch' %></td>
 	<td><%= button_to 'Down Vote', downvote_restaurant_path(restaurant), method: 'patch'%></td>
