Test is commented out for the comments test controller, the code is there just doesn't work also I fixed bug that caused only one user to see the vote buttons on the home screen

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -28,13 +28,13 @@
         <td><%= restaurant.name %></td>
         <td><%= restaurant.location %></td>
         <td><%= link_to 'Show', restaurant %></td>
-        <% if restaurant.user == current_user %>
+        <% if user_signed_in? %>
         <td><%= restaurant.up_vote %></td>
         <td><%= restaurant.down_vote %></td>
         
 	<td><%= button_to 'Up Vote', upvote_restaurant_path(restaurant), method: 'patch' %></td>
 	<td><%= button_to 'Down Vote', downvote_restaurant_path(restaurant), method: 'patch'%></td>
-  <% end %>
+      <% end %>
       </tr>
     <% end %>  
   </tbody>
